<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_icon_pressed"
        android:title="@string/menu_home"
        app:showAsAction="withText" />


    <item
        android:id="@+id/navigation_my_jobs"
        android:icon="@drawable/ic_myjobs_icon_pressed"
        android:title="@string/menu_myjobs"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/ic_mk_support_pressed"
        android:title="@string/menu_support"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_inbox_icon_pressed"
        android:title="@string/menu_news"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_icon_pressed"
        android:title="@string/menu_account" />

</menu>